# semantic-grid

./: .dockerignore  .gitignore  LICENSE.md  README.md  package-lock.json  package.json  system-architecture.md  taskfile.yaml  turbo.json
.github/workflows/: build.yml  docker-publish.yml
apps/cms/: Dockerfile  package.json
apps/cms/src/: payload-types.ts  payload.config.ts
apps/cms/src/collections/: DashboardItems.ts  Dashboards.ts  Queries.ts  Users.ts
apps/cms/src/migrations/: 20251008_195827_user_access.ts_  20251008_223642_dummy_1.json  20251008_223642_dummy_1.ts  20251010_202527_dashboard_item_add_height.json  20251010_202527_dashboard_item_add_height.ts  index.ts
apps/db-meta/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.new  package.json  pyproject.toml  run.sh
apps/db-meta/.github/workflows/: lint.yml
apps/db-meta/dbmeta_app/: config.py  logs.py  main.py  prompt_instructions.yaml  query_examples.yaml  schema_descriptions.yaml
apps/db-meta/dbmeta_app/api/: model.py  routes.py  test_main.http
apps/db-meta/dbmeta_app/etl/: load.py
apps/db-meta/dbmeta_app/prompt_assembler/: prompt_packs.py
apps/db-meta/dbmeta_app/prompt_items/: data_sample.py  db_struct.py  prompt_instructions.py  query_examples.py  sql_dialect.py
apps/db-meta/dbmeta_app/test/: main.py
apps/db-meta/dbmeta_app/vector_db/: milvus.py
apps/db-meta/dbmeta_app/wh_db/: db.py
apps/db-meta/k8s/base/: deployment.yml
apps/db-meta/k8s/overlays/cloud/: ingress.yml  patch-config.yml  patch-etl.yml  patch.yml
apps/db-meta/k8s/overlays/local/: ingress.yml  kustomization.yml  patch-config.yml  patch-etl.yml  patch.yml
apps/fm-app/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  celery_run.sh  connect_wh_local.sh  package.json  pyproject.toml  run.sh  test_main.http  watch_worker.sh
apps/fm-app/.github/workflows/: lint.yml  regression-test.yml  test-fastapi.yml
apps/fm-app/alembic/: env.py
apps/fm-app/alembic/versions/: 2612f8ff58cf_rename_context_col_to_metadata.py  777b14ab5755_add_linked_session_id_column_to_request_.py  87c828ab9dee_add_rating_and_revision_fields_to_.py  91e125b36fe1_add_parent_column_to_session_table.py  93ba5726f5d3_additional_request_statuses.py  a0686b6349c6_add_descriotion_column_to_query_table.py  a3b38266a4dc_create_first_tables.py  a7fc3f59da32_add_refs_column_to_session_table.py  e0d7196b3f12_additional_request_columns.py  e7cf6ece9116_add_context_column_to_session_table.py  e806b209d0e9_add_query_table.py  e875a2bfeeb0_add_intent_to_request_status_type_enum.py  fcafb13134ea_add_refs_column_to_request_table.py
apps/fm-app/bulk_test/: ct1.csv  harder_questions.csv  harder_questions_multistep.csv  langgraph1.csv  master-list-anthropic.csv  master-list-gemini.csv  master_list.csv  master_list_v2.csv  mcp1.csv  mcp_test.csv  new_questions.csv  pyproject.toml  ql.csv  qualified_legacy_db_multistep.csv  qualified_questions_legacy_db.csv  qualified_short.csv  question_7.csv  questions_list.csv  questions_list_old.csv  run_bulk.py  run_list.py  v2_basic_tests.csv  wip_NWH.csv  wip_hard_NWH.csv
apps/fm-app/docker-compose/: docker-compose.yml
apps/fm-app/fm_app/: __init__.py  call_local.py  config.py  logs.py  stopwatch.py
apps/fm-app/fm_app/ai_models/: llm.py  model.py
apps/fm-app/fm_app/api/: auth0.py  db_session.py  model.py  routes.py  test_routes.py
apps/fm-app/fm_app/db/: admin_db.py  db.py
apps/fm-app/fm_app/mcp_servers/: db_meta.py  db_ref.py  mcp_async_providers.py  solana_db.py  solana_db_manifest.yaml
apps/fm-app/fm_app/prompt_assembler/: prompt_packs.py
apps/fm-app/fm_app/services/: charts.py  model.py
apps/fm-app/fm_app/slots/: schemas.py  slot_schemas.json
apps/fm-app/fm_app/workers/: agent.py  data_only_flow.py  db_session.py  flex_flow.py  interactive_flow.py  langgraph_flow.py  mcp_flow.py  mcp_flow_new.py  model.py  multistep_flow.py  pipeline.yml  prompt_elements.py  simple_flow.py  worker.py
apps/fm-app/k8s/base/: deployment.yml
apps/fm-app/k8s/overlays/cloud/: ingress.yml  ingress_old.yml  kustomization.yml  patch-config.yml  patch.yml  volume.yml
apps/fm-app/k8s/overlays/local/: ingress.yml  kustomization.yml  local-test-secret.yml  patch-config.yml  patch.yml
apps/fm-app/k8s/overlays/project-n/: kustomization.yml  patch-config.yml
apps/web/: .dockerignore  .eslintrc.json  Dockerfile  drizzle.config.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/app/: actions.tsx  app-bar.tsx  footer.tsx  global-error.tsx  globals.css  home-page.tsx  layout.tsx  page.module.css  page.tsx_  swr-provider.tsx  theme.ts  top-nav.tsx
apps/web/app/(dash)/: layout.tsx  top-nav.tsx
apps/web/app/chat/: actions.tsx  app-bar.tsx  context-drawer.tsx  dialog.tsx  layout.tsx  nav-drawer.tsx  page.tsx
apps/web/app/components/: CopyQueryUrl.tsx  DashboardChartItem.tsx  DashboardGrid.tsx  DashboardItem.tsx  DashboardItemMenu.tsx  DashboardItemPage.tsx  DashboardTableItem.tsx  GridItemNavClient.tsx  GridNavClient.tsx  ItemViewSwitcher.tsx  LabeledSwitch.tsx  LoginPrompt.tsx  MuiLicense.tsx  SaveQueryUrl.tsx  ScrollLockWrapper.tsx  ScrollWrapper.tsx  SemanticGridMenu.tsx  ShareQueryUrl.tsx  SliderSwitch.tsx  SqlView.tsx  StyledValue.tsx  TopNavClient.tsx  UserProfileMenu.tsx  ViewNavClient.tsx  dancing-balls.tsx
apps/web/app/contexts/: localStorageProvider.ts
apps/web/app/db/: index.ts  schema.sql  schema.ts
apps/web/app/fonts/: stylesheet.css
apps/web/app/grid/: layout.tsx  page.tsx
apps/web/app/helpers/: cell.ts  chart.tsx  chat.ts  nav.ts  text.tsx
apps/web/app/hooks/: useAdminRequests.ts  useAppUser.ts  useGuest.ts  useInfiniteQuery.ts  useItemView.ts  useLocalStorage.ts  useMessage.ts  usePageVisibility.ts  useQuery.ts  useQueryObject.ts  useSession.ts  useUserSession.ts  (+1 more)
apps/web/drizzle/: 0000_aberrant_spyke.sql  0001_glorious_prodigy.sql  0002_rich_the_hood.sql
docs/: systems-architecture.md  templates-how-to.md
infra/: .gitignore
infra/helm/: .helmignore  Chart.yaml  values.yaml
(+106 files in other folders)
