[project]
requires-python = ">= 3.13"
name = "db-meta"
version = "0.1.0"
dependencies = [
    "alembic==1.14.0",
    "amqp==5.3.0",
    "annotated-types==0.7.0",
    "anyio==4.6.2.post1",
    "asyncpg==0.30.0",
    "billiard==4.2.1",
    "black==25.1.0",
    "celery==5.4.0",
    "certifi==2024.8.30",
    "cffi==1.17.1",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "clickhouse-connect==0.8.15",
    "clickhouse-sqlalchemy==0.3.2",
    "cryptography==43.0.3",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "fastapi==0.115.12",
    "fastapi-cli==0.0.5",
    "fastmcp==2.2.7",
    "flake8==7.2.0",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.6",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "isort==5.6.4",
    "jinja2==3.1.4",
    "jsonschema>=4.25.0",
    "kombu==5.4.2",
    "mako==1.3.6",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==1.26.4",
    "openai>=1.79.0",
    "pre-commit==4.0.1",
    "prompt-toolkit==3.0.48",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pydantic==2.9.2",
    "pydantic-core==2.23.4",
    "pydantic-settings==2.6.1",
    "pygments==2.18.0",
    "pyjwt==2.9.0",
    "pymilvus~=2.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==2.0.7",
    "python-multipart==0.0.17",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "shellingham==1.5.4",
    "six==1.16.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.36",
    "starlette==0.41.2",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "uuid7==0.1.0",
    "uvicorn==0.32.0",
    "uvloop==0.21.0",
    "vine==5.1.0",
    "watchfiles==0.24.0",
    "wcwidth==0.2.13",
    "websockets==15.0.1",
]

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["k8s"]

[tool.ruff]
exclude = [
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "alembic",
    "bulk_test",
    "prompt_elements.py"
]
line-length = 88

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = ["E", "F", "I"]

[tool.black]
line-length = 88
target-version = ['py312']  # Adjust based on your Python versions

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "black==25.1.0",
    "flake8==7.2.0",
    "ruff==0.11.6",
]
